k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    app.kubernetes.io/name: myingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1 -> regex
    # nginx.ingress.kubernetes.io/use-regex: "true"   -> regex
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - decibel.foo
    secretName: acme-crt-secret
  rules:
  - host: decibel.foo
    http:
      paths:
      - pathType: Prefix  # ImplementationSpecific if using regex
        path: /api        #(?:/|$)(.*)
        backend:
          service:
            name: backend-service
            port:
              number: 8081
      - pathType: Prefix
        path: "/ws"
        backend:
          service:
            name: backend-service
            port:
              number: 8081
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-service
            port: 
              number: 80
